Minor remaining polishing of the `Configuration` class.
Signed-off-by: Michael Simons <michael.simons@neo4j.com>